# pynamubot

./: .gitignore  LICENSE  PUBLISHING.md  README.md  RELEASE.md  pyproject.toml
.github/workflows/: publish-pypi.yml
src/pynamubot/: __init__.py  __version__.py
src/pynamubot/api/: __init__.py  api.py  schemas.py
src/pynamubot/specific/: __init__.py  alphawiki.py  namuwiki.py  theseedwiki.py
